labs/ISTIO/manifests/link-unshorten-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: link-unshorten-service
spec:
 type: LoadBalancer
 ports:
   - port: 8080
     targetPort: 8080
     protocol: TCP
 selector:
   app: unshorten-api
